--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  height: 100vh;
-  width: 100vw;
 }
 img,
 picture,
@@ -49,8 +47,8 @@ h6 {
 }
 
 div#root {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 * {
