--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@
   height: 100%;
   width: 100%;
   grid-template: 1fr 10fr 1fr / 1fr 3fr;
+  overflow-x: hidden;
 }
 
 header,
@@ -37,4 +38,12 @@ main {
   display: flex;
   justify-content: center;
   align-content: center;
+}
+
+@media (max-width: 750px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
